service.yaml
apiVersion: v1
kind: Service
metadata:
  name: achivement2-service
spec:
  selector:
    app: achivement2-deployment
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
