ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: achivement2-ingress
  annotations:
    haproxy.org/ingress.class: haproxy
  namespace: ns-10
spec:
  ingressClassName: haproxy
  rules:
  - host: node-10.fergus.host
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: achivement2-service
            port:
              number: 80
